added mqtt client subscriber and changed layers names
client implementation is done without input validation
changed EF-Core layer to DA(Data Access) layer
changed Core layer to DataModels layer

--- a/IntelligentDiagnostics.API/IntelligentDiagnostics.API.csproj
+++ b/IntelligentDiagnostics.API/IntelligentDiagnostics.API.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\IntelligentDiagnostics.EFCore\IntelligentDiagnostics.EFCore.csproj" />
+    <ProjectReference Include="..\IntelligentDiagnostics.DAL\IntelligentDiagnostics.DAL.csproj" />
   </ItemGroup>
 
 </Project>
