--- a/IntelligentDiagnostics.DAL/IntelligentDiagnostics.DAL.csproj
+++ b/IntelligentDiagnostics.DAL/IntelligentDiagnostics.DAL.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Identity" Version="1.10.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -16,10 +17,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="MQTTnet" Version="3.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\IntelligentDiagnostics.Core\IntelligentDiagnostics.Core.csproj" />
+    <ProjectReference Include="..\IntelligentDiagnostics.DataModels\IntelligentDiagnostics.DataModels.csproj" />
   </ItemGroup>
 
 </Project>
