GET/GET by id for sensors / temp edit for datamodels

--- a/IntelligentDiagnostics.BL/IntelligentDiagnostics.BL.csproj
+++ b/IntelligentDiagnostics.BL/IntelligentDiagnostics.BL.csproj
@@ -7,16 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Dtos\PredictionsDTOs\" />
-    <Folder Include="Dtos\RegisterationDTOs\" />
-    <Folder Include="Dtos\UserDTOs\" />
-    <Folder Include="Mapper\FaultMapper\" />
-    <Folder Include="Mapper\PredictionMapper\" />
-    <Folder Include="Mapper\UserMapper\" />
     <Folder Include="Services\MqttService\MqttRecieve\" />
     <Folder Include="Services\MqttService\MqttSend\" />
     <Folder Include="Services\PredictionsService\" />
     <Folder Include="Services\RemoteOBDService\" />
+  </ItemGroup>
+    <ItemGroup>
+    <ProjectReference Include="..\IntelligentDiagnostics.DAL\IntelligentDiagnostics.DAL.csproj" />
   </ItemGroup>
 
 </Project>
