GET for sensors, car systems
Added get all and get by id for sensors and car systems.
Added necessary functions for the requests.
Removed unused folders.
Change database name to match the project name.

--- a/IntelligentDiagnostician.API/appsettings.json
+++ b/IntelligentDiagnostician.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnectionStrings": "Server =.; Database =IntelligentDiagnostics ; Integrated Security = SSPI; TrustServerCertificate = True;"
+    "DefaultConnectionStrings": "Server =.; Database =IntelligentDiagnostician ; Integrated Security = SSPI; TrustServerCertificate = True;"
   },
   "Logging": {
     "LogLevel": {
