--- a/IntelligentDiagnostician.API/appsettings.json
+++ b/IntelligentDiagnostician.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnectionStrings": "Server =.; Database =IntelligentDiagnostician ; Integrated Security = SSPI; TrustServerCertificate = True;"
+    "DefaultConnectionStrings": "Server =.; Database =IntelligentDiagnosticianDev ; Integrated Security = SSPI; TrustServerCertificate = True;"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Jwt": {
+    "SigningKey": "",
+    "Issuer": "SecureApi",
+    "Audience": "SecureApiUser",
+    "Lifetime": 30
+  }
+
+
 }
