--- a/IntelligentDiagnostician.BL/IntelligentDiagnostician.BL.csproj
+++ b/IntelligentDiagnostician.BL/IntelligentDiagnostician.BL.csproj
@@ -6,7 +6,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
     <ItemGroup>
-    <ProjectReference Include="..\IntelligentDiagnostician.DAL\IntelligentDiagnostician.DAL.csproj" />
+      <ProjectReference Include="..\IntelligentDiagnostician.DataModels\IntelligentDiagnostician.DataModels.csproj" />
   </ItemGroup>
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="13.0.1" />
