Add extension methods for mapping

--- a/IntelligentDiagnostician.BL/IntelligentDiagnostician.BL.csproj
+++ b/IntelligentDiagnostician.BL/IntelligentDiagnostician.BL.csproj
@@ -11,5 +11,8 @@
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="13.0.1" />
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Utils\Mapper\SensorConverters\" />
+    </ItemGroup>
 
 </Project>
