--- a/IntelligentDiagnostician.DAL/IntelligentDiagnostician.DAL.csproj
+++ b/IntelligentDiagnostician.DAL/IntelligentDiagnostician.DAL.csproj
@@ -19,6 +19,7 @@
     </PackageReference>
     <PackageReference Include="MQTTnet" Version="3.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.10" />
   </ItemGroup>
 
   <ItemGroup>
