Fix merging issues

--- a/IntelligentDiagnostician.API/appsettings.json
+++ b/IntelligentDiagnostician.API/appsettings.json
@@ -9,9 +9,9 @@
     }
   },
   "AllowedHosts": "*",
-
+  "SigningKey": "this is my custom Secret key for authentication",
   "Jwt": {
-    "SigningKey": "",
+    "SigningKey": "TokenSecretKey",
     "Issuer": "SecureApi",
     "Audience": "SecureApiUser",
     "Lifetime": 30
