Added update validation rules

--- a/IntelligentDiagnostician.API/appsettings.json
+++ b/IntelligentDiagnostician.API/appsettings.json
@@ -9,9 +9,8 @@
     }
   },
   "AllowedHosts": "*",
-  "SigningKey": "this is my custom Secret key for authentication",
   "Jwt": {
-    "SigningKey": "TokenSecretKey",
+    "SigningKey": "qybUy47Dt_yJpHylqumh4zYmekGFoaXQs6TuPx7Jnck",
     "Issuer": "SecureApi",
     "Audience": "SecureApiUser",
     "Lifetime": 30
