add_superuser_and_edit_login

--- a/IntelligentDiagnostician.API/appsettings.json
+++ b/IntelligentDiagnostician.API/appsettings.json
@@ -11,7 +11,7 @@
   "AllowedHosts": "*",
 
   "Jwt": {
-    "SigningKey": "",
+    "SigningKey": "qybUy47Dt_yJpHylqumh4zYmekGFoaXQs6TuPx7Jnck",
     "Issuer": "SecureApi",
     "Audience": "SecureApiUser",
     "Lifetime": 30
