--- a/IntelligentDiagnostician.BL/IntelligentDiagnostician.BL.csproj
+++ b/IntelligentDiagnostician.BL/IntelligentDiagnostician.BL.csproj
@@ -11,6 +11,7 @@
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="13.0.1" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
+      <PackageReference Include="MQTTnet" Version="3.1.2" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.5.1" />
     </ItemGroup>
 
