--- a/IntelligentDiagnostician.API/appsettings.json
+++ b/IntelligentDiagnostician.API/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnectionStrings": "Server =.; Database =IntelligentDiagnosticianDev ; Integrated Security = SSPI; TrustServerCertificate = True;"
-  },
+  //"ConnectionStrings": {
+  //  "DefaultConnectionStrings": "Server =.; Database =AutoDiag ; Integrated Security = SSPI; TrustServerCertificate = True;"
+  //},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -10,7 +10,6 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "SigningKey": "qybUy47Dt_yJpHylqumh4zYmekGFoaXQs6TuPx7Jnck",
     "Issuer": "SecureApi",
     "Audience": "SecureApiUser",
     "Lifetime": 30
