--- a/IntelligentDiagnostician.BL/IntelligentDiagnostician.BL.csproj
+++ b/IntelligentDiagnostician.BL/IntelligentDiagnostician.BL.csproj
@@ -12,6 +12,7 @@
       <PackageReference Include="AutoMapper" Version="13.0.1" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
       <PackageReference Include="MQTTnet" Version="3.1.2" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.5.1" />
     </ItemGroup>
 
