--- a/IntelligentDiagnostician.API/appsettings.json
+++ b/IntelligentDiagnostician.API/appsettings.json
@@ -1,7 +1,4 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnectionStrings": "Server=db5074.public.databaseasp.net; Database=db5074; User Id=db5074; Password=9a=StG8#?3qE; Encrypt=False; MultipleActiveResultSets=True;"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -10,8 +7,7 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "SigningKey": "jVdfUDcubdFJaPngjSEJMV1dU2f5p6QNfGe1Ho6SIC4",
-    "Issuer": "autodiagsystemtest.runasp.net",
+    "Issuer": "SecureApi",
     "Audience": "SecureApiUser",
     "Lifetime": 30
   }
