--- a/AutoDiag.API/appsettings.json
+++ b/AutoDiag.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnectionStrings": "Server=db5074.public.databaseasp.net; Database=db5074; User Id=db5074; Password=9a=StG8#?3qE; Encrypt=False; MultipleActiveResultSets=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,7 +10,8 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Issuer": "SecureApi",
+    "SigningKey": "jVdfUDcubdFJaPngjSEJMV1dU2f5p6QNfGe1Ho6SIC4",
+    "Issuer": "autodiagsystemtest.runasp.net",
     "Audience": "SecureApiUser",
     "Lifetime": 30
   }
